[开发] 加入登录的自定义配置

--- a/security-demo/pom.xml
+++ b/security-demo/pom.xml
@@ -24,7 +24,7 @@
     <dependencies>
         <dependency>
             <groupId>com.bcdbook.security</groupId>
-            <artifactId>security-core</artifactId>
+            <artifactId>security-browser</artifactId>
         </dependency>
     </dependencies>
 
