[开发] 自定义登录成功处理和自定义登录失败处理开发完成

--- a/security-demo/src/main/resources/application.yml
+++ b/security-demo/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
 
 easy-spring:
   security:
+    # 浏览器的配置
     browser:
-      loginPage: /demo-signIn.html
+      # 登录页面的配置
+      # loginPage: /demo-signIn.html
+      # 登录时的返回方式
+      signInResponseType: JSON
+
 
