[开发] 图片验证码重构完成

--- a/security-demo/src/main/resources/application.yml
+++ b/security-demo/src/main/resources/application.yml
@@ -23,4 +23,11 @@ easy-spring:
       # 登录时的返回方式
       signInResponseType: JSON
 
+    code:
+      image:
+        length: 2
+        width: 100
+        urls: /user/*
+
+
 
