[开发] 优化验证码的验证路径, 优化登录页面的跳转逻辑

--- a/security-demo/src/main/resources/application.yml
+++ b/security-demo/src/main/resources/application.yml
@@ -27,7 +27,9 @@ easy-spring:
       image:
         length: 2
         width: 100
-        urls: /user/*
-
+        urls[0]:
+          url: /user/1
+          method: GET
+          validateCodeType: SMS
 
 
