[架构] 加入 spring social 的结构框架, 以准备 spring social 第三方认证的开发

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>security-browser</module>
         <module>security-app</module>
         <module>security-demo</module>
+        <module>spring-social</module>
     </modules>
 
     <!--项目名称-->
