[开发] qq 第三方登录的相关开发完成

--- a/security-browser/pom.xml
+++ b/security-browser/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-session-core</artifactId>
         </dependency>
 
+        <!--加入 qq 的第三方登录配置-->
+        <dependency>
+            <groupId>com.bcdbook.security</groupId>
+            <artifactId>spring-social-qq</artifactId>
+        </dependency>
+
         <!--引入工具 jar-->
         <dependency>
             <groupId>org.projectlombok</groupId>
