--- a/security-demo/pom.xml
+++ b/security-demo/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>security-browser</artifactId>
         </dependency>
 
+        <!--引入通过 qq 登录的自定义 jar-->
+        <dependency>
+            <groupId>com.bcdbook.security</groupId>
+            <artifactId>spring-social-qq</artifactId>
+        </dependency>
+
         <!--引入工具 jar-->
         <dependency>
             <groupId>org.projectlombok</groupId>
