--- a/security-demo/src/main/resources/application.yml
+++ b/security-demo/src/main/resources/application.yml
@@ -56,6 +56,7 @@ easy-spring:
         app-secret: ${easy-spring.qq.app-secret}
         # 服务提供商的识别码
         providerId: callback.do
-
+      # social 授权后, 若找不到用户, 跳转的路径
+      sign-up-url: /demo-signUp.html
       # 配置第三方登录拦截的请求地址前缀
       filter-processes-url: /qqLogin
