[开发] 添加查看第三方账号绑定状态的视图及接口

--- a/security-demo/src/main/resources/application.yml
+++ b/security-demo/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
   profiles:
     active: summer
 
+  aop:
+    proxy-target-class: false
+
   redis:
     host: ${easy-spring.redis.server-host}
     port: ${easy-spring.redis.port}
