--- a/security-browser/pom.xml
+++ b/security-browser/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
 
         <!--加入 qq 的第三方登录配置-->
         <dependency>
