[开发] 退出登录返回数据类型的优化, 代码结构优化

--- a/security-demo/src/main/resources/application.yml
+++ b/security-demo/src/main/resources/application.yml
@@ -48,7 +48,7 @@ easy-spring:
       sign-in-response-type: JSON
       # 退出登录的配置
       sign-out:
-        result-type: JSON
+        # result-type: JSON
         # 退出登录成功后, 跳转的地址
         # sign-out-success-url: /demo-sign-out.html
         # 删除的 cookie
