[开发] 使用 用户名和密码 的形式 执行 OAuth2 认证服务器的形式进行认证开发完成

--- a/security-app/pom.xml
+++ b/security-app/pom.xml
@@ -27,6 +27,13 @@
             <groupId>com.bcdbook.security</groupId>
             <artifactId>security-core</artifactId>
         </dependency>
+
+        <!--引入 lombok 工具包-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
