[开发] 使用 jwt token 增强器, 获取 jwt token 的功能开发完成

--- a/security-demo/pom.xml
+++ b/security-demo/pom.xml
@@ -42,6 +42,14 @@
             <artifactId>spring-social-wechat</artifactId>
         </dependency>
 
+        <!--引入 jwt 的 jar-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
+
         <!--引入工具 jar-->
         <dependency>
             <groupId>org.projectlombok</groupId>
