--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,8 @@
     <!--子模块-->
     <modules>
         <module>security-dependencies</module>
-        <module>security-core</module>
-        <module>security-browser</module>
-        <module>security-app</module>
-        <module>security-demo</module>
         <module>spring-social</module>
+        <module>spring-security</module>
     </modules>
 
     <!--项目名称-->
