[架构] 添加 sso 单点登录的结构

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>security-dependencies</module>
         <module>spring-social</module>
         <module>spring-security</module>
+        <module>spring-security-sso</module>
     </modules>
 
     <!--项目名称-->
