--- a/spring-security-sso/security-sso-client1/pom.xml
+++ b/spring-security-sso/security-sso-client1/pom.xml
@@ -38,6 +38,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
