--- a/spring-security/security-demo/pom.xml
+++ b/spring-security/security-demo/pom.xml
@@ -22,14 +22,14 @@
     <description>Security Demo</description>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>io.easyspring.security</groupId>-->
-            <!--<artifactId>security-browser</artifactId>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>io.easyspring.security</groupId>
-            <artifactId>security-app</artifactId>
+            <artifactId>security-browser</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.easyspring.security</groupId>-->
+            <!--<artifactId>security-app</artifactId>-->
+        <!--</dependency>-->
 
         <!--引入通过 qq 登录的自定义 jar-->
         <dependency>
