[开发] 抽取权限配置为独立项目

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spring-social</module>
         <module>spring-security</module>
         <module>spring-security-sso</module>
+        <module>spring-security-authorize</module>
     </modules>
 
     <!--项目名称-->
