--- a/spring-social/spring-social-core/pom.xml
+++ b/spring-social/spring-social-core/pom.xml
@@ -23,6 +23,12 @@
     <url>https://www.easyspring.io/</url>
 
     <dependencies>
+        <!--引入权限配置的核心包-->
+        <dependency>
+            <groupId>io.easyspring.security</groupId>
+            <artifactId>spring-security-authorize-core</artifactId>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>org.springframework.security.oauth.boot</groupId>-->
             <!--<artifactId>spring-security-oauth2-autoconfigure</artifactId>-->
