[开发] 动态权限功能开发完成, 包括浏览器端和APP端

--- a/security-dependencies/pom.xml
+++ b/security-dependencies/pom.xml
@@ -194,6 +194,12 @@
                 <artifactId>spring-security-authorize-core</artifactId>
                 <version>${base.version}</version>
             </dependency>
+            <!--spring authorize 权限控制动态控制模块-->
+            <dependency>
+                <groupId>io.easyspring.security</groupId>
+                <artifactId>spring-security-authorize-dynamic</artifactId>
+                <version>${base.version}</version>
+            </dependency>
 
 
             <!--<dependency>-->
