--- a/spring-security-authorize/pom.xml
+++ b/spring-security-authorize/pom.xml
@@ -25,6 +25,7 @@
 
     <modules>
         <module>spring-security-authorize-core</module>
+        <module>spring-security-authorize-dynamic</module>
     </modules>
 
 </project>
