[发布] 1.0.1-RELEASE 发布

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
     <parent>
         <groupId>io.easyspring.framework</groupId>
         <artifactId>easy-spring-dependencies</artifactId>
-        <!--suppress MavenPropertyInParent -->
-        <version>${base.version}</version>
+        <version>1.0.1-RELEASE</version>
         <relativePath>../easy-spring-dependencies</relativePath>
     </parent>
 
@@ -33,5 +32,5 @@
     <!--项目简介-->
     <description>Spring Security</description>
     <!--项目连接地址-->
-    <url>https://easyspring.io/</url>
+    <url>https://www.easyspring.io/</url>
 </project>
