--- a/spring-security-authentication/spring-security-authentication-browser/pom.xml
+++ b/spring-security-authentication/spring-security-authentication-browser/pom.xml
@@ -7,8 +7,8 @@
     <parent>
         <groupId>io.easyspring.security</groupId>
         <artifactId>spring-security-authentication</artifactId>
-        <!--suppress MavenPropertyInParent -->
-        <version>${base.version}</version>
+        <version>1.0.1-RELEASE</version>
+        <relativePath>../</relativePath>
     </parent>
 
     <artifactId>spring-security-authentication-browser</artifactId>
