--- a/spring-security-sso/spring-security-sso-server/pom.xml
+++ b/spring-security-sso/spring-security-sso-server/pom.xml
@@ -3,10 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-security-sso</artifactId>
         <groupId>io.easyspring.security</groupId>
-        <!--suppress MavenPropertyInParent -->
-        <version>${base.version}</version>
+        <artifactId>spring-security-sso</artifactId>
+        <version>1.0.1-RELEASE</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -40,4 +40,16 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
