--- a/spring-social/pom.xml
+++ b/spring-social/pom.xml
@@ -8,8 +8,8 @@
     <parent>
         <groupId>io.easyspring.security</groupId>
         <artifactId>easy-spring-security</artifactId>
-        <!--suppress MavenPropertyInParent -->
-        <version>${base.version}</version>
+        <version>1.0.1-RELEASE</version>
+        <relativePath>../</relativePath>
     </parent>
 
     <!--组别 id-->
