[bug] 修复 Security 的验证码反序列化问题 如果存储 验证码的 序列化和反序列化时用 Jackson 来处理, 则他们在反序列化的时候会出现解析失败的问题

--- a/spring-security-demo/src/main/resources/application.yml
+++ b/spring-security-demo/src/main/resources/application.yml
@@ -91,8 +91,8 @@ easy-spring:
 
     # oauth2 认证的配置
     oauth2:
-      # token 存储器
-      # token-store: redis
+      # token 存储器, 如果设置的不是 Redis 或者没有设置时, 使用 jwt 的方式
+      token-store: redis
       # 加密签名
       jwt-signing-key: test-key
       # 允许的认证客户
