--- a/spring-security-authentication/spring-security-authentication-core/pom.xml
+++ b/spring-security-authentication/spring-security-authentication-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>io.easyspring.security</groupId>
         <artifactId>spring-security-authentication</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -70,6 +70,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <!--工具包-->
