--- a/pom.xml
+++ b/pom.xml
@@ -33,4 +33,17 @@
     <description>Spring Security</description>
     <!--项目连接地址-->
     <url>https://www.easyspring.io/</url>
+
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-deploy-plugin</artifactId>-->
+                <!--<version>${maven-deploy-plugin.version}</version>-->
+                <!--<configuration>-->
+                    <!--<skip>true</skip>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
 </project>
